--- a/PhotoEditTest.kv
+++ b/PhotoEditTest.kv
@@ -7,11 +7,13 @@ Display
         GridLayout:
             rows: 4
             TextInput:
+                id: name
                 text: "Enter image name (e.g., image.png)"
                 size_hint: .5, 3
             Button:
                 text: "Load Image"
                 size_hint: .5, 3
+                on_release: root.verify_image(name.text)
             Button:
                 text: "Black and White"
                 size_hint: .5, 3
@@ -32,5 +34,5 @@ Display
                 size_hint: .5, 3
         Image:
             id: image
-            source: root.display_image()
+            source: root.display_image(name.button)
             size_hint: 1, 5
