What? -Joe Biden

--- a/PhotoEditTest.kv
+++ b/PhotoEditTest.kv
@@ -34,5 +34,5 @@ Display
                 size_hint: .5, 3
         Image:
             id: image
-            source: root.display_image(name.button)
+            source: root.display_image()
             size_hint: 1, 5
