get black and white to work, scrapped pixelate

--- a/PhotoEditTest.kv
+++ b/PhotoEditTest.kv
@@ -25,19 +25,19 @@ Display
             Button:
                 text: "Line Drawing"
                 size_hint: .5, 3
-                #on_release: root.linedrawing()
+                on_release: root.linedrawing()
             Button:
                 text: "Pointilism"
                 size_hint: .5, 3
-                #on_release: root.pointilism()
+                on_release: root.pointilism()
             Button:
                 text: "Sepia"
                 size_hint: .5, 3
                 on_release: root.sepia()
             Button:
-                text: "Pixelate"
+                text: "Pixelate (BROKEN)"
                 size_hint: .5, 3
-                on_release: root.pixelate()
+                #on_release: root.pixelate()
         Image:
             id: pic
             source: ""
