--- a/PhotoEdit.kv
+++ b/PhotoEdit.kv
@@ -2,23 +2,43 @@ Display
 
 <Display>:
     BoxLayout:
+        padding: "15dp"
         orientation: "vertical"
-        Label:
-            text: "Gallery of interpretations for A Past Outside of Time"
+        GridLayout:
+            rows: 4
+            TextInput:
+                id: name
+                text: "Enter image name (and the format)"
+                size_hint: .5, 3
+            Button:
+                text: "Load Image"
+                size_hint: .5, 3
+                on_release: pic.source = name.text
+            Button:
+                text: "Black and White"
+                size_hint: .5, 3
+                on_release: root.oldtimey()
+            Button:
+                text: "Inverse"
+                size_hint: .5, 3
+                on_release: root.inverse()
+            Button:
+                text: "Line Drawing"
+                size_hint: .5, 3
+                on_release: root.linedrawing()
+            Button:
+                text: "Pointilism"
+                size_hint: .5, 3
+                on_release: root.pointilism()
+            Button:
+                text: "Sepia"
+                size_hint: .5, 3
+                on_release: root.sepia()
+            Button:
+                text: "Pixelate (BROKEN)"
+                size_hint: .5, 3
+                #on_release: root.pixelate()
         Image:
-            id: image
-            source: root.display_image()
-            size_hint: 1, 6
-        Label:
-            text: ""
-            id: desc
-        BoxLayout:
-            Button:
-                text: "<<<"
-                background_color: "black"
-                on_press: root.back_image()
-
-            Button:
-                text: ">>>"
-                background_color: "black"
-                on_press: root.advance_image()
+            id: pic
+            source: ""
+            size_hint: 1, 5
